[package]
name = "fallow"
version = "0.1.0"
edition = "2024"

[dependencies]
img_hash = "3.2.0"
image = { version = "0.23.14", features = [ "png" ] }
find-subimage = "0.1.12"
clap = { version = "4.5.38", features = [ "cargo" ] }
video-rs = { version = "0.10.3", features = [ "ndarray" ] }
ndarray = "0.16.1"
